--- a/style.css
+++ b/style.css
@@ -1,118 +1,109 @@
-/* This is a CSS comment. Notice that CSS comments are
-enclosed by different characters than HTML comments. */
-
-/*The whole thing was coded using atom with the beautify package enabled*/
-
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
+html {
+    box-sizing: border-box;
 }
 
-img {
-  max-height: 250px;
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
-ul>li {
-  display: inline-block;
-  margin-left: 25px;
-  margin-right: 25px;
-  /* You can also add some margins here to make it look prettier */
-  zoom: 1;
-  /* this fix is needed for IE7- */
-  /*Information used from stack overflow*/
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background: #ffffff url('../images/geometry2.png'); /* Background pattern from Subtle Patterns */
+    font-family: 'Coda', cursive;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 h1 {
-  color: white;
-  border-radius: 15px;
-  background: blue;
-  text-align: center;
-  text-transform: uppercase;
-  font-family: sans-serif;
-  font-size: 75px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
 }
 
-h2 {
-  font-family: sans-serif;
-  color: red;
+/*
+ * Styles for the deck of cards
+ */
+
+.deck {
+    width: 660px;
+    min-height: 680px;
+    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+    padding: 32px;
+    border-radius: 10px;
+    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 0 3em;
 }
 
-.return {
-  font-family: sans-serif;
-  background: blue;
-  padding: 10px;
-  border-radius: 15px;
-  color: white;
+.deck .card {
+    height: 125px;
+    width: 125px;
+    background: #2e3d49;
+    font-size: 0;
+    color: #ffffff;
+    border-radius: 8px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
 }
 
-.introdution-text {
-  color: #0064ff;
-  font-size: 25px;
-  font-family: sans-serif;
-  text-align: center;
+.deck .card.open {
+    transform: rotateY(0);
+    background: #02b3e4;
+    cursor: default;
 }
 
-.folks-name {
-  text-align: center;
-  color: #0064ff;
-  padding: 10px;
+.deck .card.show {
+    font-size: 33px;
 }
 
-.folks-picture {
-  height: auto;
-  width: 100%;
+.deck .card.match {
+    cursor: default;
+    background: #02ccba;
+    font-size: 33px;
 }
 
-.info-pic-section {
-  -webkit-column-count: 2;
-  -moz-column-count: 2;
-  column-count: 2;
-  display: flex;
-  justify-content: center;
+/*
+ * Styles for the Score Panel
+ */
+
+.score-panel {
+    text-align: left;
+    width: 345px;
+    margin-bottom: 10px;
 }
 
-.people-list {
-  display: flex;
-  justify-content: center;
+.score-panel .stars {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    margin: 0 5px 0 0;
 }
 
-/*details for the images on the main page*/
-
-.big-image {
-  display: block;
-  margin: auto;
-  height: 100%;
-  right: 0px;
-  margin-right: 25px;
+.score-panel .stars li {
+    list-style: none;
+    display: inline-block;
 }
 
-.description {
-  font-family: sans-serif;
-  color: darkred;
+.score-panel .restart {
+    float: right;
+    cursor: pointer;
 }
-
-.caption {
-  right: 0px;
-  margin-left: 25%
-}
-
-.column {
-  float: left;
-  /*width: 60%;*/
-}
-
-.left {
-  width: 75%;
-  background: #f7f7ca;
-  padding-left: 15px;
-  border-radius: 15px;
-}
-
-.right {
-  width: 25%;
-}
-
-/* CSS allows you to give your page style (colors, shapes, fonts, etc.)
-You can apply CSS elements to entire HTML classes.*/
