--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,11 @@ button {
   height: auto;
 }
 
+.icon {
+  max-width: 45px;
+  height: auto;
+}
+
 .score-panel {
   text-align: left;
   width: 600px;
